# serializer version: 1
# name: test_ast_entity_snapshot
  dict({
    'children': list([
      dict({
        'attributes': list([
        ]),
        'name': 'usuario',
        'node_type': 'entity',
      }),
    ]),
    'name': 'data_model',
    'node_type': 'project',
  })
# ---
# name: test_ast_page_snapshot
  dict({
    'children': list([
      dict({
        'children': list([
          dict({
            'component_type': 'formulario',
            'name': 'formulario',
            'node_type': 'component',
          }),
        ]),
        'name': 'login',
        'node_type': 'page',
      }),
    ]),
    'name': 'project',
    'node_type': 'project',
  })
# ---
# name: test_ast_project_snapshot
  dict({
    'children': list([
      dict({
        'name': 'create',
        'node_type': 'action',
        'target': '',
      }),
    ]),
    'name': 'project',
    'node_type': 'project',
  })
# ---
